@@ -8,6 +8,8 @@ Broker:
   bridging to e.g. Amazon or Google.
 - Add support for MQTT v5 bridges to handle the "retain-available" property
   being false.
+- Allow MQTT v5.0 outgoing bridges to fall back to MQTT v3.1.1 if connecting
+  to a v3.x only broker.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
